--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Vent | <%= @title %></title>
+    <title><%= title %></title>
     <%= csrf_meta_tag %>
   </head>
   <body>
