Added custom stylesheet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,6 @@
       <section class="round">
         <%= yield %>
       </section>
-    </div>
+    </div> <!-- End of container -->
   </body>
 </html>
