--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,5 @@
 <p>
   This is the home page of Vent: For all your venting needs
 </p>
+
+<%= link_to "Sign up NOW!", '#', :class => "signup_button round" %>
