Added a Users controller and layout link tests

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,4 +3,4 @@
   This is the home page of Vent: For all your venting needs
 </p>
 
-<%= link_to "Sign up NOW!", '#', :class => "signup_button round" %>
+<%= link_to "Sign up NOW!", signup_path, :class => "signup_button round" %>
