--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -180,3 +180,12 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
+
+/* Listing all users */
+ul.users {
+  margin-top: 1em;
+}
+
+ul.users li {
+  list-style: none;
+}
