--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,21 @@
 <h1>All users</h1>
 
+<%= will_paginate %>
+
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user, :size => 30 %>
-      <%= link_to user.name, user_path(user) %>
-    </li>
+  # Some serious rails magic
+  <% render @users %>
+
+=being
+  This block is being substituted by that 1 line up there
+  Note: will_paginate needs to have the instance variable @users
+        as default parameters
+  <% @users.each do |user|
+    # <% render 'user', :user => user %>
+    <%= render user %>
   <% end %>
+=end
+
 </ul>
+
+<%= will_paginate %>
