Deleted all microposts and replace with ventposts as that is the real name of the items and model

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,11 +5,18 @@
         <%= gravatar_for @user %>
         <%= "#{@user.name}" %>
       </h1>
+      <% if @user.ventposts.any? %>
+        <table class="ventposts" summary="User ventposts">
+          <%= render @ventposts %>
+        </table>
+        <%= will_paginate @ventposts%>
+      <% end %>
     </td>
 
     <td class="sidebar round">
       <strong>Name</strong> <%= @user.name %><br />
       <strong>URL</strong> <%= link_to user_path(@user), @user %>
+      <strong>Vents</strong> <%= @user.ventposts.count %>
     </td>
   </tr>
 </table>
