--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -189,3 +189,59 @@ ul.users {
 ul.users li {
   list-style: none;
 }
+
+/* Ventposts */
+h1.ventpost {
+  margin-bottom: 0.3em;
+}
+
+table.ventposts {
+  margin-top: 1em;
+}
+
+table.ventposts tr {
+  height: 70px;
+}
+
+table.ventposts tr td.gravatar {
+  border-top: 1px solid #ccc;
+  vertical-align: top;
+  width: 50px;
+}
+
+table.ventposts tr td.ventpost {
+  border-top: 1px solid #ccc;
+  vertical-align: top;
+  padding-top: 10px;
+}
+
+table.ventposts tr td.ventpost span.timestamp {
+  display: block;
+  font-size: 85%;
+  color: #666;
+}
+
+div.user_info img {
+  padding-right: 0.1em;
+}
+
+div.user_info a {
+  text-decoration: none;
+}
+
+div.user_info span.user_name {
+  position: absolute;
+}
+
+div.user_info span.ventposts {
+  font-size: 80%;
+}
+
+form.new_ventpost {
+  margin-bottom: 2em;
+}
+
+form.new_ventpost textarea {
+  height: 4em;
+  margin-bottom: 0;
+}
