--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
         <%= gravatar_for @user %>
         <%= "#{@user.name}" %>
       </h1>
+      <%= render 'follow_form' if signed_in? %>
       <% if @user.ventposts.any? %>
         <table class="ventposts" summary="User ventposts">
           <%= render @ventposts %>
@@ -17,6 +18,7 @@
       <strong>Name</strong> <%= @user.name %><br />
       <strong>URL</strong> <%= link_to user_path(@user), @user %>
       <strong>Vents</strong> <%= @user.ventposts.count %>
+      <%= render 'shared/stats' %>
     </td>
   </tr>
 </table>
