Working follow and unfollow buttons with Ajax

--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -11,7 +11,7 @@
       </td>
       <td>
         <a href="<%= followers_user_path(@user) %>">
-          <span id="following" class="stat">
+          <span id="followers" class="stat">
             <%= pluralize(@user.followers.count, 'follower') %>
           </span>
         </a>
