Changed the name of the home pages when signed in

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
 <h1>Contact</h1>
 <p>
-  Contact <a href="http://www.seanfchan.com">Sean</a>
+  If you have any concerns about the site or would just like to contact me, please don't hesitate to email me
 </p>
