--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,11 @@
   <%= link_to logo, root_path %>
   <nav class="round">
     <ul>
-      <li><%= link_to "Home", root_path %></li>
+      <% if signed_in? %>
+        <li><%= link_to "Vent", root_path %></li>
+      <% else %>
+        <li><%= link_to "Home", root_path %></li>
+      <% end %>
       <% if signed_in? %>
         <li><%= link_to "Profile", current_user %></li>
         <li><%= link_to "Users", users_path %></li>
