--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,10 @@
 <h1>About</h1>
+<br />
+<h4><strong>Our mission:</strong></h4>
+<p>Get Your Anger Out!</p>
 <p>
-  This is a web app that I have created to learn the rails framework as well as to learn about monetary generation from ads.
+Use this site, make this <strong>your</strong> site. Let the anger flow out of you. Make yourself feel better. Allow yourself to relieve the pain before you relieve your pain on other, physically or verbally. Maybe after hearing other people's troubles, you may feel that you are not alone.
+</p>
+<p>
+I built this site for anyone feeling angry. I hope you will find this site useful.
 </p>
