--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <table class="front" summary="For sign-in users">
     <tr>
       <td class="main">
-        <h1 class="ventpost">Vent your heart out!</h1>
+        <h1 class="ventpost">Speak your mind!</h1>
           <%= render 'shared/ventpost_form' %>
           <%= render 'shared/feed' %>
       </td>
