--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -14,7 +14,7 @@
     </span>
   </td>
 
-  <% if current_user?(feed_item.user) %>
+  <% if current_user?(feed_item.user) || current_user.admin? %>
     <td>
       <%= link_to 'delete', feed_item, :method => :delete,
                                        :confirm => 'You sure?',
