--- a/app/views/pages/dump.html.erb
+++ b/app/views/pages/dump.html.erb
@@ -6,6 +6,10 @@
           <%= render 'shared/ventpost_form' %>
           <%= render 'shared/feed' %>
       </td>
+      <td class="sidebar round">
+        <%= render 'shared/user_info' %>
+        <%= render 'shared/stats' %>
+      </td>
     </tr>
   </table>
 <% end %>
