--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,7 @@
       <td class="sidebar round">
         <%= render 'shared/user_info' %>
         <%= render 'shared/stats' %>
+        <%= render 'shared/sidebar_ad_yellow_background' %>
       </td>
     </tr>
   </table>
