Fixed ad css and ventpost_form css

--- a/app/views/pages/dump.html.erb
+++ b/app/views/pages/dump.html.erb
@@ -1,7 +1,7 @@
 <% if signed_in? %>
   <table class="front" summary="For sign-in users">
     <tr>
-      <td class="main">
+      <td class="main" id="dumpventform">
         <h1 class="ventpost">Speak your mind!</h1>
           <%= render 'shared/ventpost_form' %>
           <%= render 'shared/feed' %>
