--- a/app/views/shared/_sidebar_ad_yellow_background.html.erb
+++ b/app/views/shared/_sidebar_ad_yellow_background.html.erb
@@ -1,12 +1,14 @@
-<script type="text/javascript"><!--
-  google_ad_client = "ca-pub-5381624453627211";
-  /* ProtoVentSideBarAd */
-  google_ad_slot = "9843826147";
-  google_ad_width = 160;
-  google_ad_height = 600;
-  //-->
-</script>
+<div class="sidebarad">
+  <script type="text/javascript"><!--
+    google_ad_client = "ca-pub-5381624453627211";
+    /* ProtoVentSideBarAd */
+    google_ad_slot = "9843826147";
+    google_ad_width = 160;
+    google_ad_height = 600;
+    //-->
+  </script>
 
-<script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+  <script type="text/javascript"
+    src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+</div>
