Changed the signin label names

--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/error_messages', :object => f.object %>
 <div class="field">
-  <%= f.label :name %><br />
+  <%= f.label :name,  %(Screen Name (fake name)) %><br />
   <%= f.text_field :name %>
 </div>
 <div class="field">
@@ -12,6 +12,6 @@
   <%= f.password_field :password %>
 </div>
 <div class="field">
-  <%= f.label :password_confirmation, 'Confirmation' %><br />
+  <%= f.label :password_confirmation, %(Retype Password) %><br />
   <%= f.password_field :password_confirmation %>
 </div>
