--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,2 +1,2 @@
 $("follow_form").update("<%= escape_javascript(render('users/unfollow')) %>")
-$("followers").update('<%= "#{@user.followers.count} followers" %>')
+$("followers").update("<%= pluralize(@user.followers.count, 'follower') %>")
