--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -12,12 +12,17 @@
     <span class="timestamp">
       Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
     </span>
-    <% if (current_user != feed_item.user) || current_user.admin? %>
+    
       <span class="votevent">
-        <%= link_to upvote, votevents_path(:ventpost_id => feed_item), :method => :post %>
-        <%= pluralize(feed_item.ventvotes.count, 'votes') %>
+        <% if (current_user != feed_item.user) && !(Votevent.where("ventpost_id = ? AND user_id = ?", feed_item.id, current_user.id)).any? %>
+          <div id=<%= "upvoteicon#{feed_item.id}" %>>
+            <%= link_to upvote, votevents_path(:ventpost_id => feed_item), :method => :post %>
+          </div>
+        <% end %>
+        <div id=<%= "upvotecount#{feed_item.id}" %>>
+          <%= pluralize(feed_item.ventvotes.count, 'vote') %>
+        </div>
       </span>
-    <% end %>
   </td>
 
   <% if current_user?(feed_item.user) || current_user.admin? %>
