Fixed the Ajax for up vote

--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -16,7 +16,7 @@
       <span class="votevent">
         <% if (current_user != feed_item.user) && !(Votevent.where("ventpost_id = ? AND user_id = ?", feed_item.id, current_user.id)).any? %>
           <div id=<%= "upvoteicon#{feed_item.id}" %>>
-            <%= link_to upvote, votevents_path(:ventpost_id => feed_item), :method => :post %>
+            <%= link_to upvote, votevents_path(:ventpost_id => feed_item), :method => :post, :remote => true %>
           </div>
         <% end %>
         <div id=<%= "upvotecount#{feed_item.id}" %>>
