--- a/app/views/votevents/create.js.erb
+++ b/app/views/votevents/create.js.erb
@@ -1,2 +1,2 @@
-$("upvoteicon#{@ventpost.id}").update("")
-$("upvotecount#{@ventpost.id}").update("<%= pluralize(@ventpost.ventvotes.count, 'vote') %>")
+$("upvoteicon<%=@ventpost.id%>").update("")
+$("upvotecount<%=@ventpost.id%>").update("<%= pluralize(@ventpost.ventvotes.count, 'vote') %>")
