Updated the about, help, news, and contact static pages. Help still needs work

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,8 +3,10 @@
 <h4><strong>Our mission:</strong></h4>
 <p>Get Your Anger Out!</p>
 <p>
-Use this site, make this <strong>your</strong> site. Let the anger flow out of you. Make yourself feel better. Allow yourself to relieve the pain before you relieve your pain on other, physically or verbally. Maybe after hearing other people's troubles, you may feel that you are not alone.
+Use this site, make this <strong>your</strong> site. Let the anger flow out of you. Make yourself feel better. Allow yourself to relieve the pain before you relieve your pain on others, physically or verbally. Maybe after hearing other people's troubles, you may feel that you are not alone.
 </p>
 <p>
-I built this site for anyone feeling angry. I hope you will find this site useful.
+This site exists for anyone needing to <strong>vent</strong>.<br /> 
+This site exists for <strong>you</strong>.<br />
+I hope you will find this site useful.
 </p>
