--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,7 @@
 <h1>Contact</h1>
 <p>
-  If you have any concerns about the site or would just like to contact me, please don't hesitate to email me
+  I know, I know, sometimes you just want to talk to someone one-on-one. Well here is your chance.<br />
+  If you want to email the creator of this website please direct your emails here: 
+  <a href="mailto:contact@protovent.me?Subject=Please%20insert%20subject%20here">contact@protovent.me</a><br />
+  The creator will definitely try to respond to all emails sent, if your email does not get answer, please try again.
 </p>
