--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,4 +1,5 @@
 <h1>Help</h1>
 <p>
-  There is no help. :( Sorry
+  For any question on how to use the site, please direct all emails to: 
+  <a href="mailto:support@protovent.me?Subject=I%20need%20help%21">support@protovent.me</a>
 </p>
