--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,7 @@
     <ul>
       <li><%= link_to 'About', about_path %></li>
       <li><%= link_to 'Contact', contact_path %></li>
-      <li><%= link_to 'News', '#' %></li>
-      <li><%= link_to 'Creator', 'http://www.seanfchan.com' %></li>
+      <li><%= link_to 'News', 'http://blog.protovent.me' %></li>
     </ul>
   </nav>
 </footer>
