Made the news link in the footer open in a new tab

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <ul>
       <li><%= link_to 'About', about_path %></li>
       <li><%= link_to 'Contact', contact_path %></li>
-      <li><%= link_to 'News', 'http://blog.protovent.me' %></li>
+      <li><%= link_to 'News', 'http://blog.protovent.me', :target => "_blank" %></li>
     </ul>
   </nav>
 </footer>
