Changed some css colors

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,13 @@
 <header>
-  <%= link_to logo, root_path %>
+  <!--<%= link_to logo, root_path %>-->
+  <div class="headerLogo round">
+    <h1>
+      Protovent<br/>
+    </h1>
+    <h3>
+      For all your venting needs
+    </h3>
+  </div>
   <nav class="round">
     <ul>
       <% if signed_in? %>
